<resources>
    <string name="not">In order to view question papers and memo you will need data,you can download or make them offline  for later use.</string>
    <string name="n1">The is only one paper in June</string>
    <string name="n2">Adverts won\'t pop up while previewing question papers or practising. </string>
    <string name="sim">Try the simulations</string>
    <string name="phet">Phet Simulations </string>
    <string name="app_name">Grade12science</string>
    <string name="CHOOSE">CHOOSE SUBJECT:</string>
    <string name="lfsc">LIFE SCIENCES</string>
    <string name="MATH">MATHEMATICS</string>
    <string name="PHYSICS">PHYSICAL SCIENCES</string>
    <string name="AGRIC">AGRICULTURAL SCIENCES </string>
    <string name="EXTRAS">EXTRAS:</string>
    <string name="LEARN">LEARN XTRA</string>
    <string name="LFSC_ESSAYS">LIFE SCIENCES ESSAYS(OFFLINE)</string>
    <string name="paper1">PAST PAPERS PAPER1</string>
    <string name="paper2">PAST PAPERS PAPER2</string>
    <string name="EXCERCISE">NOTES AND EXCERCISES</string>
    <string name="SIMULATIONS">ONLINE EXPERIMENTS</string>
    <string name="prac">PRACTICALS</string>
    <string name="NOTE">*NOTE*</string>
    <string name="SIMULATION2">
    *ONLINE EXPERIMENT THE LINK WILL  DIRECT YOU  TO CHAPTER SIMULATIONS WHICH WILL HELP YOU EXPERIMENT  MORE ABOUT THE CHAPTER.<br> \n</br>
       * IF YOU USING PHONE DEVICE,THE ONLY COMPATIBLE SIMULATIONS ARE THOSE OF HTML5
    </string>
    <string name="PRAC2">* PRACTICALS THE LINK WILL DIRECT YOU TO YOUTUBE WHERE I HAVE CREATED A LIBRARY FOR APPROXIMATELY ALL<br> \n</br>
    PRACTICALS FOR THE WHOLE YEAR.
    </string>
    <string name="exam">November exams and memo:</string>
    <string name="memo">Memo</string>
    <string name="september">September/trials  exams and memo: </string>
    <string name="june">June exams and memo:</string>
    <string name="nov18">November 2018</string>
    <string name="nov17">November 2017</string>
    <string name="nov16">November 2016</string>
    <string name="nov15">November 2015</string>
    <string name="nov14">November 2014</string>
    <string name="nov13">November 2013</string>
    <string name="sep19">September 2019</string>
    <string name="sep18">September 2018</string>
    <string name="sep17">September 2017</string>
    <string name="sep16">September 2016</string>
    <string name="sep15">September 2015</string>
    <string name="sep14">September 2014</string>
    <string name="sep13">September 2013</string>
    <string name="jun19">June 2019</string>
    <string name="jun18">June 2018</string>
    <string name="jun17">June 2017</string>
    <string name="jun16">June 2016</string>
    <string name="jun15">June 2015</string>
    <string name="jun14">June 2014</string>
    <string name="supp">Feb/March exams and memos</string>
    <string name="supp18">FEB/MARCH 2018</string>
    <string name="supp17">FEB/MARCH 2017</string>
    <string name="supp16">FEB/MARCH 2016</string>
    <string name="supp15">FEB/MARCH 2015</string>
    <string name="supp14">FEB/MARCH 2014</string>
    <string-array name="essay_title">
        <item>MENSTRUAL CYCLE</item>
        <item>PROTEIN SYNTHESIS AND DNA REPLICATION</item>
        <item>PROTEIN SYNTHESIS AND MUTATION </item>
        <item>FORELIMBS MODIFICATION AND FUNCTION</item>
        <item>MUTATION ON PROTEIN SYNTHESIS AND EVOLUTION</item>
        <item>ACCOMODATION, HEARING AND BALANCE</item>
        <item>MEIOSIS, MUTATION AND NATURAL SELECTION</item>
        <item>ADRENALIN AND HEARING </item>
        <item>OUT OF AFRICA</item>
        <item>NATURAL SELECTION AND SPECIATION</item>
        <item>SPERMATOGENESIS</item>
        <item>CHROMOSOME AND MEIOSIS</item>
        <item>DNA REPLICATION AND PROTEIN SYNTHESIS</item>
        <item>GENETIC VARIATION</item>
        <item>PETRIFIED FOSSILS</item>
        <item>HYPOTHALAMUS</item>
        <item>STEM CELL</item>
        <item>HEARING AND REFLEX</item>
        <item>LAMARCKISM AND DARWINISM</item>
        <item>REPRODUCTIVE STRATEGIES</item>
        <item>HOMEOSTASIS</item>
        <item>BLOOD GROUPS</item>
        <item>PREGNANCY</item>
        <item>HORMONES</item>
        <item>EVOLUTION</item>
        <item>PUNCTUATED EQUILIBRIUM VS GRADUALISM</item>
        <item>GENETIC VARIATION AND MUTATION </item>
        <item>FOETUS</item>
        <item>SKULL </item>
    </string-array>
</resources>