<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView6"
                android:textSize="23dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exam" />
            <Button
                android:id="@+id/button"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/nov18" />
            <Button
                android:id="@+id/button0"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button2"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/nov17" />
            <Button
                android:id="@+id/button02"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button3"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/nov16" />
            <Button
                android:id="@+id/button03"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/background"
                android:text="@string/nov15" />
            <Button
                android:id="@+id/button04"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button5"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/nov14" />
            <Button
                android:id="@+id/button05"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/september"
                android:textSize="25dp"/>

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button7"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sep19" />
            <Button
                android:id="@+id/button07"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button8"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sep18" />
            <Button
                android:id="@+id/button08"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button9"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sep17" />
            <Button
                android:id="@+id/button09"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button10"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sep16" />
            <Button
                android:id="@+id/button010"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button11"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/sep15" />
            <Button
                android:id="@+id/button011"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />

            <TextView

                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/june"
                android:textSize="25dp" />

            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button14"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/jun19" />
            <Button
                android:id="@+id/button014"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button15"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/jun18" />
            <Button
                android:id="@+id/button015"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button16"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/jun17" />
            <Button
                android:id="@+id/button016"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button17"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/jun16" />
            <Button
                android:id="@+id/button017"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button18"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/jun15" />
            <Button
                android:id="@+id/button018"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <TextView

                android:id="@+id/textView8"
                android:textSize="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/supp" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button20"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/supp18" />
            <Button
                android:id="@+id/button020"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button21"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/supp17" />
            <Button
                android:id="@+id/button021"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button22"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/supp16" />
            <Button
                android:id="@+id/button022"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />
            <Button
                android:layout_marginTop="5dp"
                android:id="@+id/button23"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:text="@string/supp15" />
            <Button
                android:id="@+id/button023"
                android:background="@drawable/background"
                android:layout_width="80dp"
                android:layout_height="27dp"
                android:layout_gravity="right"
                android:text="@string/memo" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
