<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            app:srcCompat="@drawable/agric" />
        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/paper1" />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/paper2" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/guide" />
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:background="@drawable/background"
            android:layout_height="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/de" />
        <TextView
            android:layout_marginTop="20sp"
            android:textSize="23sp"
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NOTE" />

        <TextView
            android:id="@+id/textView4"
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SIMULATION2" />
        <TextView
            android:id="@+id/textView5"
            android:layout_marginTop="5sp"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/PRAC2" />
        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            android:layout_marginTop="20dp"
            ads:adUnitId="ca-app-pub-2649737131140447/6655326235">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

</RelativeLayout>
